--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing posts</h1>
 
+<%= will_paginate %>
+
 <table>
   <thead>
     <tr>
@@ -16,6 +18,8 @@
     <%= render @posts %>
   </tbody>
 </table>
+
+<%= will_paginate %>
 
 <br>
 
