--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <h1>All users</h1>
 
+<%= will_paginate %>
+
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= image_tag user.avatar_url(:thumb), class: 'img-circle thumb' %>
-      <%= link_to user.email, user %>
-    </li>
-  <% end %>
+  <%= render @users %>
 </ul>
+
+<%= will_paginate %>
