포스트 이미지첨부 기능 추가

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,7 @@
       <th>Content</th>
       <th>Title</th>
       <th>User</th>
+      <th>Images</th>
       <th></th>
       <th></th>
       <th></th>
