--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :content %>
     <%= f.input :title %>
+    <%= f.input :image %>
   </div>
 
   <div class="form-actions">
