--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,6 +2,7 @@
   <td><%= post.content %></td>
   <td><%= post.title %></td>
   <td><%= post.user.email %></td>
+  <td><%= image_tag post.image_url(:thumb).to_s %></td>
   <td><%= link_to 'Show', post %></td>
   <td><%= link_to 'Edit', edit_post_path(post) %></td>
   <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
