--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">DevStudyMission08</a>
+          <%= link_to 'DevRulu', root_path, class: 'brand' %>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <% if user_signed_in? %>
@@ -70,7 +70,6 @@
               <li class="nav-header">Sidebar</li>
               <li><%= link_to "Listing posts", "/posts"  %></li>
               <li><%= link_to "All Users", "/users"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
