--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,5 +18,10 @@
   <%= @post.user.email %>
 </p>
 
+<p>
+  <strong>Tags:</strong>
+  <%= tag_list @post.tag_list %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
