--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <% if user_signed_in? %>
+                <li><%= link_to "Profile", @user %>
                 <li><%= link_to 'Edit User', edit_user_registration_path %>
                 <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete, confirm: 'Are you sure?' %>
               <% else %>
