--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= post.content %></td>
   <td><%= post.title %></td>
-  <td><%= post.user.email %></td>
+  <td><%= link_to post.user.email, post.user %></td>
   <td><%= link_to 'Show', post %></td>
   <td><%= link_to 'Edit', edit_post_path(post) %></td>
   <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
