--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,11 +1,11 @@
-<%= simple_form_for(@post) do |f| %>
+<%= simple_form_for @post, html: { class: 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :content %>
     <%= f.input :image %>
-    <%= f.input :tag_list %>
+    <%= f.input :tag_list, input_html: { data: { tags: @post.tags } } %>
   </div>
 
   <div class="form-actions">
