--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,5 +23,11 @@
   <%= tag_list @post.tag_list %>
 </p>
 
+<p>
+  <strong>Comment:</strong>
+  i donot know
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to 'Comment', new_post_comment_path(@post) %>
