--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,9 +30,11 @@
 </p>
 
 <p>
-  <strong>Comment:</strong>
+  <strong>Comment: (<%= @comments.size %>)</strong>
 
-  <%= render 'comments/form' %>
+  <% if user_signed_in? %>
+    <%= render 'comments/form' %>
+  <% end %>
   <ul>
   <%= render @comments %>
   </ul>
