--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,5 +86,11 @@
 
     </div> <!-- /container -->
 
+    <a href="https://github.com/dev-study/devRulu">
+      <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
+          alt="Fork me on GitHub"
+          style="position: absolute; top: 0; right: 0; border: 0;">
+    </a>
+
   </body>
 </html>
