--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,15 +82,18 @@
 
       <footer>
         <p>&copy; Company 2013</p>
+
+        <div class="github">
+          <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=fork&count=true"
+                  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=watch&count=true"
+                  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=follow&count=true"
+                  allowtransparency="true" frameborder="0" scrolling="0" width="130" height="20"></iframe>
+        </div>
       </footer>
 
     </div> <!-- /container -->
-
-    <a href="https://github.com/dev-study/devRulu">
-      <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
-          alt="Fork me on GitHub"
-          style="position: absolute; top: 0; right: 0; border: 0;">
-    </a>
 
   </body>
 </html>
