add simple navigation and friendly_id

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,6 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.input :nickname %>
     <%= f.input :avatar, as: :file %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
