--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
           </a>
           <%= link_to 'DevRulu', root_path, class: 'brand' %>
-          <div class="container-fluid nav-collapse">
+          <nav class="container-fluid nav-collapse" id="gnb">
             <ul class="nav">
               <% if user_signed_in? %>
                 <li><%= link_to "Profile", @user %>
@@ -58,7 +58,7 @@
                 <li><%= link_to 'Sign up', new_user_registration_path %>
               <% end %>
             </ul>
-          </div><!--/.nav-collapse -->
+          </nav><!--/.nav-collapse -->
         </div>
       </div>
     </div>
@@ -66,22 +66,22 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
-          <div class="well sidebar-nav">
+          <nav class="well sidebar-nav" id="lnb">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
               <li><%= link_to "Listing posts", "/posts"  %></li>
               <li><%= link_to "All Users", "/users"  %></li>
             </ul>
-          </div><!--/.well -->
+          </nav><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <section class="span9" id="contents">
           <%= bootstrap_flash %>
           <%= yield %>
-        </div>
+        </section>
       </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2013</p>
+      <footer id="footer">
+        <h1>&copy; DevRulu</h1>
 
         <div class="github">
           <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=fork&count=true"
@@ -89,7 +89,7 @@
           <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=watch&count=true"
                   allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
           <iframe src="http://ghbtns.com/github-btn.html?user=dev-study&repo=devRulu&type=follow&count=true"
-                  allowtransparency="true" frameborder="0" scrolling="0" width="130" height="20"></iframe>
+                  allowtransparency="true" frameborder="0" scrolling="0" width="192" height="20"></iframe>
         </div>
       </footer>
 
