--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,15 +21,14 @@
     font-weight: bold;
 }
 
-
-footer {
-  overflow: hidden;
+.navbar-fixed-top {
+  z-index: 9;
 }
 
-footer p {
-  float: left;
+body {
+  padding-top: 60px;
 }
 
-footer .github {
-  float: right;
+#nprogress .bar {
+  z-index: 99999 !important;
 }
