--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="page-header">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+</div>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
@@ -6,6 +8,9 @@
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.input :nickname %>
+  </div>
+
+  <div class="form-inputs">
     <%= f.input :avatar, as: :file %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
