edit image size version

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= image_tag @post.user.avatar_url(:normal) %>
+  <%= image_tag @post.user.avatar_url(:medium) %>
   <%= link_to @post.user.email, @post.user %>
 </p>
 
