--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 <table>
   <tbody>
     <tr>
-      <td><%= image_tag @user.avatar_url(:normal) %></td>
+      <td><%= image_tag @user.avatar_url(:medium) %></td>
     </tr>
     <tr>
       <td>id : <%= @user.id %></td>
