--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
 
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :nickname, required: true %>
     <%= f.input :avatar, as: :file %>
     <%= f.input :password, required: true %>
     <%= f.input :password_confirmation, required: true %>
