add user to comment

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <% unless comment.new_record? %>
   <li>
     <% if comment.user %>
-      <%= user.nickname %>
+      <%= comment.user.nickname %>
     <% end %>
     <%= comment.content %>
   </li>
